--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -15,9 +15,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
         <div class="container-fluid container">
             <a class="navbar-brand fw-bold fs-4" href="#">Admin Panel</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#adminNavbarContent" aria-controls="adminNavbarContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbarContent"
+                aria-controls="adminNavbarContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="adminNavbarContent">
@@ -26,9 +25,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Manage Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">View Blog</a>
+                        <a class="nav-link bg-dark" href="#" onclick="logout()">Logout</a>
                     </li>
-                    </ul>
+
+                    <li class="nav-item">
+                        <a class="nav-link bg-dark" href="index.html">View Blog</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
